fix: returns graph tooltip clipping issue on small screen

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+/* css debugger */
+/* * {
+  outline: 1px solid green;
+} */
 .main-wrapper {
   display: flex;
   align-items: center;
